Implementación del patrón composite
cambios en la clase Snake, SnakeHead, SnakeBodyy creación de interfaz