@@ -10,72 +10,61 @@ import javafx.geometry.Point2D;
 import javafx.scene.input.KeyCode;
 
 
+import java.util.ArrayList;
+import java.util.List;
+
+
 public class Snake implements Animatable {
     private static final float speed = 2;
     private int health = 100;
 
-    private SnakeHead head;
-    private DelayedModificationList<GameEntity> body;
-
+    private List<SnakePart> parts;
 
     public Snake(Point2D position) {
-        head = new SnakeHead(this, position);
-        body = new DelayedModificationList<>();
+        parts = new ArrayList<>();
+        SnakeHead head = new SnakeHead(this, position);
+        parts.add(head);
 
         addPart(4);
     }
-
     public void step() {
         SnakeControl turnDir = getUserInput();
-        head.updateRotation(turnDir, speed);
-
+        ((SnakeHead) parts.get(0)).updateRotation(turnDir, speed);
         updateSnakeBodyHistory();
         checkForGameOverConditions();
-
-        body.doPendingModifications();
-    }
-
+        for (SnakePart part : parts) {
+            part.step();
+        }}
     private SnakeControl getUserInput() {
         SnakeControl turnDir = SnakeControl.INVALID;
-        if(InputHandler.getInstance().isKeyPressed(KeyCode.LEFT)) turnDir = SnakeControl.TURN_LEFT;
-        if(InputHandler.getInstance().isKeyPressed(KeyCode.RIGHT)) turnDir = SnakeControl.TURN_RIGHT;
+        if (InputHandler.getInstance().isKeyPressed(KeyCode.LEFT)) turnDir = SnakeControl.TURN_LEFT;
+        if (InputHandler.getInstance().isKeyPressed(KeyCode.RIGHT)) turnDir = SnakeControl.TURN_RIGHT;
         return turnDir;
     }
 
     public void addPart(int numParts) {
-        GameEntity parent = getLastPart();
+        SnakePart parent = getLastPart();
         Point2D position = parent.getPosition();
 
         for (int i = 0; i < numParts; i++) {
             SnakeBody newBodyPart = new SnakeBody(position);
-            body.add(newBodyPart);
-        }
-        Globals.getInstance().display.updateSnakeHeadDrawPosition(head);
-    }
-
+            parts.add(newBodyPart);
+        } }
     public void changeHealth(int diff) {
         health += diff;
     }
-
     private void checkForGameOverConditions() {
-        if (head.isOutOfBounds() || health <= 0) {
+        if (((GameEntity) parts.get(0)).isOutOfBounds() || health <= 0) {
             System.out.println("Game Over");
-            Globals.getInstance().stopGame();
-        }
-    }
-
+        }}
     private void updateSnakeBodyHistory() {
-        GameEntity prev = head;
-        for(GameEntity currentPart : body.getList()) {
-            currentPart.setPosition(prev.getPosition());
+        SnakePart prev = parts.get(0);
+        for (int i = 1; i < parts.size(); i++) {
+            SnakePart currentPart = parts.get(i);
+            currentPart.updatePosition(prev.getPosition());
             prev = currentPart;
-        }
-    }
-
-    private GameEntity getLastPart() {
-        GameEntity result = body.getLast();
-
-        if(result != null) return result;
-        return head;
+        } }
+    private SnakePart getLastPart() {
+        return parts.get(parts.size() - 1);
     }
 }
